added rows and colums on the html

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,57 @@
-.sidebar{
-  width:25%
+/*
+    Created on : Feb 8th, 2019, 8:39:38 PM
+    Author     : Peter Wachira
+*/
+body {
+  background-color: rgba(249,229,188,0.9);
 }
 .container{
-  margin-left: 25%
+  margin-left: 18%;
+  width:82%;
+}
+h1,h2,h3,h4{
+  text-align:center;
+}
+.ninja-practise{
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-family: 'Black And White Picture', sans-serif;
+  color: #818181;
+  display: block;
+}
+.ninja-practise h4{
+ font-size: 30px;
+ font-family: 'Black And White Picture', sans-serif;
+}
+ .ninja-practise h4:hover {
+  color: #f1f1f1;
+}
+/*  sidebar styling */
+.sidebar {
+  height: 100%;
+  width: 18%;
+  position: fixed;
+  z-index: 1;
+  background-color:#33313b;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  padding-top: 50px;
+  text-align: center;
+}
+
+
+.sidebar a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 50px;
+  font-family: 'Black And White Picture', sans-serif;
+  color: #818181;
+  display: block;
+}
+
+.sidebar a:hover {
+  color: #f1f1f1;
+}
+form{
+  text
 }
