--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,9 @@ body {
 h1,h2,h3,h4{
   text-align:center;
 }
+h1{
+  color:#21174a;
+}
 .ninja-practise{
   padding: 6px 8px 6px 16px;
   text-decoration: none;
@@ -48,6 +51,7 @@ h1,h2,h3,h4{
   color: #818181;
   display: block;
 }
+
 
 .sidebar a:hover {
   color: #f1f1f1;
