--- a/css/styles.css
+++ b/css/styles.css
@@ -64,9 +64,8 @@ form{
   display:none;
 }
 /*  results animation*/
-.anim-typewriter{
-  animation: typewriter 4s steps(44) 2s 1 normal both,
-             blinkTextCursor 900ms steps(66) infinite normal;
-             animation-iteration-count: infinite;
+#html-results,#js-results,#css-results{
+  text-align: center;
+  font-family: 'Playfair Display SC', serif;
+  font-size: 30px;
 }
-#
