--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
 .container{
   margin-left: 18%;
   width:82%;
+  font-family: 'Quicksand', sans-serif;
 }
 h1,h2,h3,h4{
   text-align:center;
@@ -27,7 +28,7 @@ h4{
  font-family: 'Playfair Display SC', serif;
 }
  .ninja-practise h4:hover {
-  color: #f1f1f1;
+  color: #5d3a3a;
 }
 /*  sidebar styling */
 .sidebar {
@@ -35,7 +36,7 @@ h4{
   width: 18%;
   position: fixed;
   z-index: 1;
-  background-color:#1d2323;
+  background-color:#f5e4c3;
   overflow-x: hidden;
   overflow-y: hidden;
   padding-top: 40px;
@@ -54,7 +55,7 @@ h4{
 
 
 .sidebar a:hover {
-  color: #f1f1f1;
+  color: #5d3a3a;
 }
 form{
   text
@@ -68,4 +69,7 @@ form{
   text-align: center;
   font-family: 'Playfair Display SC', serif;
   font-size: 30px;
+}
+.well{
+  background-color: #fff4e3;
 }
