--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
 
 h1, h2, h3, h4 {
   text-align: center;
+  padding-top: 10px;
 }
 
 h4 {
@@ -49,7 +50,7 @@ h4 {
   padding-top: 40px;
   text-align: center;
 }
-       
+
 .sidebar a {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
@@ -81,4 +82,9 @@ form {
 
 .well {
   background-color: #fff4e3;
+}
+.floater{
+  margin-left:20%;
+  margin-left:27%;
+  padding-top: 25px;
 }
